[gd_scene load_steps=5 format=3 uid="uid://c7q35l8ctyu0e"]

[ext_resource type="Script" path="res://scripts/credits_screen.gd" id="1_5jsv6"]
[ext_resource type="Theme" uid="uid://dupann3qkyje3" path="res://themes/pixel_98.tres" id="1_ssuwq"]
[ext_resource type="Texture2D" uid="uid://560ew43lfwqo" path="res://sprites/logoB3.png" id="3_gr65l"]
[ext_resource type="AudioStream" uid="uid://b01bpv1v7smkr" path="res://music/chiphead64 - 11pm.ogg" id="5_7auvm"]

[node name="credits_screen" type="Node2D"]
script = ExtResource("1_5jsv6")

[node name="creditsPanel" type="Panel" parent="."]
offset_left = 176.0
offset_top = 129.0
offset_right = 977.0
offset_bottom = 566.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="creditsLabel" type="Label" parent="creditsPanel"]
layout_mode = 0
offset_left = 347.0
offset_top = 25.0
offset_right = 770.0
offset_bottom = 407.0
theme = ExtResource("1_ssuwq")
text = "Made by B Cube Studio

    Ariane MARONGIU
    Rafael CORONADO ROMERO
    Abigail VERHOLEN

For The University of Luxembourg
     BINFO - Software Engeineering Project

Music by Chiphead64
     https://itch.io/profile/chiphead64

"
visible_characters = 0
visible_ratio = 0.0

[node name="Sprite2D" type="Sprite2D" parent="creditsPanel"]
position = Vector2(184, 108)
scale = Vector2(0.408719, 0.508117)
texture = ExtResource("3_gr65l")

[node name="thankyouLabel" type="Label" parent="."]
offset_left = 234.0
offset_top = 79.0
offset_right = 937.0
offset_bottom = 102.0
theme = ExtResource("1_ssuwq")
text = "THANK YOU "
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="."]
offset_left = 1036.0
offset_top = 595.0
offset_right = 1126.0
offset_bottom = 627.0
theme = ExtResource("1_ssuwq")
text = "Exit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7auvm")
autoplay = true

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
